added login.php script

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         	<div align = center style="background-color:#663399;width:19%;border-radius:15px;margain:0 auto;">
                 	<br>
 	    		<div style="max-width:90%;">
-	    		<form action = "index.php" method=post>
+	    		<form action = "login.php" method=post>
                 		<fieldset id="field"><legend>Login</legend>
                     
                         Email:  <input name=email id=email autocomplete="off" placeholder="Email" required>
