--- a/register.html
+++ b/register.html
@@ -35,7 +35,7 @@
                         
                         <br><br>
 
-                		<input type = submit value="Enter the Realm">
+                		<input type = submit value="Register">
 
                 		</fieldset>
 
