--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 	    		<form action = "login.php" method=post>
                 		<fieldset id="field"><legend>Login</legend>
                     
-                        Email:  <input name=email id=email autocomplete="off" placeholder="Email" required>
+                        Email:  <input name=email id=email autocomplete="off" placeholder="Email" required><br>
                             
                 		Password:  <input type=password name=pass id=pass autocomplete="off" placeholder="Password" required><br><br>
 
