--- a/register.html
+++ b/register.html
@@ -19,19 +19,19 @@
                         <table>
                             <tr>
                             <td>First Name:</td>
-                            <td><input name=firstName id=firstName autocomplete="off" placeholder="Johnny" required></td><br>
+                            <td><input name=firstName id=firstName autocomplete="off" placeholder="Johnny" required></td>
                             </tr>
                             <tr>
                             <td>Last Name:</td>
-                            <td><input name=lastName id=lastName autocomplete="off" placeholder="Appleseed" required></td><br>
+                            <td><input name=lastName id=lastName autocomplete="off" placeholder="Appleseed" required></td>
                             </tr>
                             <tr>
                             <td>Birthday:</td>
-                            <td><input name=birthday id=birthday autocomplete="off" placeholder="01/01/1970" required></td><br>
+                            <td><input name=birthday id=birthday autocomplete="off" placeholder="01/01/1970" required></td>
                             </tr>
                             <tr>
                             <td>Email:</td>
-                            <td><input name=email id=email autocomplete="off" placeholder="Email" required></td><br>
+                            <td><input name=email id=email autocomplete="off" placeholder="Email" required></td>
                             </tr>
                             <tr>
                             <td>Password:</td>
