Fixed spacing for input forms

--- a/question.html
+++ b/question.html
@@ -12,7 +12,6 @@
 			<h2>IS218 Project 1 New Question Form</h2>
         
         	<br>
-        	<br>
         
         	<div align = center style="background-color:#663399;width:30%;border-radius:15px;margain:0 auto;">
                 	<br>
@@ -22,11 +21,11 @@
                     <table>
                         <tr>
                             <td>Question Name:</td>
-                            <td><input name=questionName id=questionName autocomplete="off" placeholder="Question Name" required></td><br>
+                            <td><input name=questionName id=questionName autocomplete="off" placeholder="Question Name" required></td>
                         </tr> 
                         <tr>
                             <td>Question Body:</td>
-                            <td><textarea name=questionBody id=questionBody autocomplete="off" placeholder="Question Body" rows="6" required></textarea></td><br>
+                            <td><textarea name=questionBody id=questionBody autocomplete="off" placeholder="Question Body" rows="6" required></textarea></td>
                         </tr>
                         <tr>
                             <td>Question Skills:</td>
