lots of changes, question form checks if logged in

--- a/question.html
+++ b/question.html
@@ -23,6 +23,9 @@
                                     <td>Question Skills:</td>
                                     <td><input name=questionSkills id=questionSkills autocomplete="off" placeholder="Question Skills" required></td>
                                 </tr>
+                                <tr>
+                                    <td><input type=submit value="Add Question"></td>
+                                </tr>
                             </table>
                         </div>
                     </form>
